--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<!--TODO: Add your credentials and a README edit-->
 <html>
-
 <head>
     <title>URL Shortener</title>
     <link rel="shortcut icon"
@@ -10,23 +8,21 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="https://thread-paper.glitch.me/public/style.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
     <div class="container">
         <h2>API Project: URL Shortener Microservice</h2>
-        <h3>User Story: </h3>
+        <h3>By <a href="https://github.com/EmanuilNikolov">Emanuil Nikolov</a></h3>
+        <h3>User Requirements: </h3>
         <ol>
             <li>I can POST a URL to <code>[project_url]/api/shorturl/new</code> and I will receive a shortened URL in
-                the JSON response.<br>Example : <code>{"original_url":"www.google.com","short_url":1}</code></li>
+                the JSON response.<br>Example: <code>{"original_url":"www.google.com","short_url":1}</code></li>
             <li>If I pass an invalid URL that doesn't follow the <code>http(s)://www.example.com(/more/routes)</code>
                 format, the JSON response will contain an error like <code>{"error":"invalid URL"}</code><br>
-                HINT: to be sure that the submitted url points to a valid site you can use the function <code>dns.lookup(host,
-                    cb)</code> from the <code>dns</code> core module.
             </li>
             <li>When I visit the shortened URL, it will redirect me to my original link.</li>
         </ol>
 
-        <h3>Short URL Creation </h3>
+        <h3>Short URL Creation</h3>
         <p>
             example: <code>POST [project_url]/api/shorturl/new</code> - <code>https://www.google.com</code>
         </p>
@@ -36,19 +32,10 @@
             <input type="submit" value="POST URL">
         </form>
         <h3>Example Usage:</h3>
+        <p>(if running for the first time, you must first POST a URL because the database will be empty)</p>
         <a href="url-shortener-microservice/api/shorturl/1">
             [this_project_url]/api/shorturl/1
         </a>
-
-        <h3>Will Redirect to:</h3>
-        <p>https://forum.freecodecamp.com</p>
-    </div>
-    <div class="footer">
-        <p>
-            by <a href="http://www.freecodecamp.com">freeCodeCamp</a>
-        </p>
     </div>
 </body>
-
-
 </html>
